add item n desc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,36 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BerandaActivity" />
-        <activity android:name=".SplashScreen">
+        <activity android:name=".BerandaActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SplashScreen"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".perlengkapan.PerlengkapanActivity" />
-        <activity android:name=".perlengkapan.PerlengkapanDetail" />
-        <activity android:name=".sebelum.SebelumActivity" />
-        <activity android:name=".sebelum.SebelumDetail" />
-        <activity android:name=".saat.SaatBkActivity" />
-        <activity android:name=".saat.SaatBkDetail" />
+        <activity android:name=".perlengkapan.PerlengkapanActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".perlengkapan.PerlengkapanDetail"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".sebelum.SebelumActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".sebelum.SebelumDetail"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".saat.SaatBkActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".saat.SaatBkDetail"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
