--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.android.pkbv2">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -41,6 +42,7 @@
         <activity android:name=".saat.SaatBkDetail"
             android:configChanges="orientation"
             android:screenOrientation="portrait"/>
-    </application>
 
+    </application>
+    <dist:module dist:instant="true"/>
 </manifest>
